err.txt
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/jtomkinson/Projects/apps/campaignshare-fetcher/src/campaignshare_fetcher/cli.py", line 210
    ")
    ^
SyntaxError: unterminated string literal (detected at line 210)
